freenas/cli/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmt_list
Rule 1     stmt_list -> stmt_redirect
Rule 2     stmt_list -> stmt_redirect NEWLINE
Rule 3     stmt_list -> stmt_redirect NEWLINE stmt_list
Rule 4     stmt_list -> NEWLINE stmt_list
Rule 5     stmt_redirect -> stmt
Rule 6     stmt_redirect -> stmt REDIRECT ATOM
Rule 7     stmt_redirect -> stmt REDIRECT STRING
Rule 8     stmt -> if_stmt
Rule 9     stmt -> for_stmt
Rule 10    stmt -> while_stmt
Rule 11    stmt -> assignment_stmt
Rule 12    stmt -> function_definition_stmt
Rule 13    stmt -> return_stmt
Rule 14    stmt -> break_stmt
Rule 15    stmt -> undef_stmt
Rule 16    stmt -> const_stmt
Rule 17    stmt -> command
Rule 18    stmt -> call
Rule 19    stmt -> expr_parens
Rule 20    stmt -> shell
Rule 21    block -> LBRACE stmt_list RBRACE
Rule 22    block -> LBRACE NEWLINE stmt_list RBRACE
Rule 23    block -> LBRACE NEWLINE RBRACE
Rule 24    block -> LBRACE RBRACE
Rule 25    if_stmt -> IF LPAREN expr RPAREN block
Rule 26    if_stmt -> IF LPAREN expr RPAREN block ELSE block
Rule 27    for_stmt -> FOR LPAREN ATOM IN expr RPAREN block
Rule 28    for_stmt -> FOR LPAREN ATOM COMMA ATOM IN expr RPAREN block
Rule 29    while_stmt -> WHILE LPAREN expr RPAREN block
Rule 30    assignment_stmt -> ATOM ASSIGN expr
Rule 31    assignment_stmt -> subscript_left ASSIGN expr
Rule 32    const_stmt -> CONST symbol ASSIGN expr
Rule 33    function_definition_stmt -> FUNCTION ATOM LPAREN RPAREN block
Rule 34    function_definition_stmt -> FUNCTION ATOM LPAREN function_argument_list RPAREN block
Rule 35    function_definition_stmt -> FUNCTION ATOM LPAREN RPAREN NEWLINE block
Rule 36    function_definition_stmt -> FUNCTION ATOM LPAREN function_argument_list RPAREN NEWLINE block
Rule 37    function_argument_list -> ATOM
Rule 38    function_argument_list -> ATOM COMMA function_argument_list
Rule 39    return_stmt -> RETURN
Rule 40    return_stmt -> RETURN expr
Rule 41    break_stmt -> BREAK
Rule 42    undef_stmt -> UNDEF ATOM
Rule 43    expr_list -> expr
Rule 44    expr_list -> expr COMMA expr_list
Rule 45    expr -> symbol
Rule 46    expr -> literal
Rule 47    expr -> array_literal
Rule 48    expr -> dict_literal
Rule 49    expr -> unary_expr
Rule 50    expr -> binary_expr
Rule 51    expr -> call
Rule 52    expr -> subscript_expr
Rule 53    expr -> anon_function_expr
Rule 54    expr -> expr_expansion
Rule 55    expr -> expr_parens
Rule 56    expr -> COPEN expr RBRACE
Rule 57    expr_parens -> LPAREN expr RPAREN
Rule 58    expr_expansion -> EOPEN command RPAREN
Rule 59    array_literal -> LBRACKET RBRACKET
Rule 60    array_literal -> LBRACKET expr_list RBRACKET
Rule 61    dict_literal -> LBRACE RBRACE
Rule 62    dict_literal -> LBRACE NEWLINE RBRACE
Rule 63    dict_literal -> LBRACE dict_pair_list RBRACE
Rule 64    dict_pair_list -> dict_pair
Rule 65    dict_pair_list -> dict_pair COMMA dict_pair_list
Rule 66    dict_pair -> expr COLON expr
Rule 67    dict_pair -> NEWLINE expr COLON expr
Rule 68    dict_pair -> NEWLINE expr COLON expr NEWLINE
Rule 69    literal -> NUMBER
Rule 70    literal -> HEXNUMBER
Rule 71    literal -> BINNUMBER
Rule 72    literal -> OCTNUMBER
Rule 73    literal -> STRING
Rule 74    literal -> TRUE
Rule 75    literal -> FALSE
Rule 76    literal -> NULL
Rule 77    symbol -> ATOM
Rule 78    call -> ATOM LPAREN RPAREN
Rule 79    call -> ATOM LPAREN expr_list RPAREN
Rule 80    subscript_left -> subscript_left LBRACKET expr RBRACKET
Rule 81    subscript_left -> symbol LBRACKET expr RBRACKET
Rule 82    subscript_expr -> expr LBRACKET expr RBRACKET
Rule 83    anon_function_expr -> FUNCTION LPAREN RPAREN block
Rule 84    anon_function_expr -> FUNCTION LPAREN RPAREN NEWLINE block
Rule 85    anon_function_expr -> FUNCTION LPAREN function_argument_list RPAREN block
Rule 86    anon_function_expr -> FUNCTION LPAREN function_argument_list RPAREN NEWLINE block
Rule 87    unary_expr -> MINUS expr
Rule 88    unary_expr -> NOT expr
Rule 89    binary_expr -> expr EQ expr
Rule 90    binary_expr -> expr NE expr
Rule 91    binary_expr -> expr GT expr
Rule 92    binary_expr -> expr GE expr
Rule 93    binary_expr -> expr LT expr
Rule 94    binary_expr -> expr LE expr
Rule 95    binary_expr -> expr PLUS expr
Rule 96    binary_expr -> expr MINUS expr
Rule 97    binary_expr -> expr MUL expr
Rule 98    binary_expr -> expr DIV expr
Rule 99    binary_expr -> expr REGEX expr
Rule 100   binary_expr -> expr AND expr
Rule 101   binary_expr -> expr OR expr
Rule 102   binary_expr -> expr NOT expr
Rule 103   binary_expr -> expr MOD expr
Rule 104   command -> command_item
Rule 105   command -> command_item parameter_list
Rule 106   command -> command_item PIPE command
Rule 107   command -> command_item parameter_list PIPE command
Rule 108   command_item -> LIST
Rule 109   command_item -> NUMBER
Rule 110   command_item -> UP
Rule 111   command_item -> symbol
Rule 112   command_item -> COPEN expr RBRACE
Rule 113   command_item -> STRING
Rule 114   parameter_list -> parameter
Rule 115   parameter_list -> parameter parameter_list
Rule 116   parameter -> set_parameter
Rule 117   parameter -> binary_parameter
Rule 118   parameter -> error
Rule 119   set_parameter -> unary_parameter
Rule 120   set_parameter -> unary_parameter COMMA set_parameter
Rule 121   set_parameter -> unary_parameter COMMA error
Rule 122   unary_parameter -> symbol
Rule 123   unary_parameter -> literal
Rule 124   unary_parameter -> array_literal
Rule 125   unary_parameter -> dict_literal
Rule 126   unary_parameter -> COPEN expr RBRACE
Rule 127   unary_parameter -> LIST
Rule 128   unary_parameter -> UP
Rule 129   binary_parameter -> ATOM ASSIGN parameter
Rule 130   binary_parameter -> ATOM EQ parameter
Rule 131   binary_parameter -> ATOM NE parameter
Rule 132   binary_parameter -> ATOM GT parameter
Rule 133   binary_parameter -> ATOM GE parameter
Rule 134   binary_parameter -> ATOM LT parameter
Rule 135   binary_parameter -> ATOM LE parameter
Rule 136   binary_parameter -> ATOM REGEX parameter
Rule 137   binary_parameter -> ATOM INC parameter
Rule 138   binary_parameter -> ATOM DEC parameter
Rule 139   shell -> SHELL
Rule 140   shell -> SHELL parameter_list

Terminals, with rules where they appear

AND                  : 100
ASSIGN               : 30 31 32 129
ATOM                 : 6 27 28 28 30 33 34 35 36 37 38 42 77 78 79 129 130 131 132 133 134 135 136 137 138
BINNUMBER            : 71
BREAK                : 41
COLON                : 66 67 68
COMMA                : 28 38 44 65 120 121
CONST                : 32
COPEN                : 56 112 126
DEC                  : 138
DIV                  : 98
ELSE                 : 26
EOPEN                : 58
EQ                   : 89 130
FALSE                : 75
FOR                  : 27 28
FUNCTION             : 33 34 35 36 83 84 85 86
GE                   : 92 133
GT                   : 91 132
HEXNUMBER            : 70
IF                   : 25 26
IN                   : 27 28
INC                  : 137
LBRACE               : 21 22 23 24 61 62 63
LBRACKET             : 59 60 80 81 82
LE                   : 94 135
LIST                 : 108 127
LPAREN               : 25 26 27 28 29 33 34 35 36 57 78 79 83 84 85 86
LT                   : 93 134
MINUS                : 87 96
MOD                  : 103
MUL                  : 97
NE                   : 90 131
NEWLINE              : 2 3 4 22 23 35 36 62 67 68 68 84 86
NOT                  : 88 102
NULL                 : 76
NUMBER               : 69 109
OCTNUMBER            : 72
OR                   : 101
PIPE                 : 106 107
PLUS                 : 95
RBRACE               : 21 22 23 24 56 61 62 63 112 126
RBRACKET             : 59 60 80 81 82
REDIRECT             : 6 7
REGEX                : 99 136
RETURN               : 39 40
RPAREN               : 25 26 27 28 29 33 34 35 36 57 58 78 79 83 84 85 86
SHELL                : 139 140
STRING               : 7 73 113
TRUE                 : 74
UNDEF                : 42
UP                   : 110 128
WHILE                : 29
error                : 118 121

Nonterminals, with rules where they appear

anon_function_expr   : 53
array_literal        : 47 124
assignment_stmt      : 11
binary_expr          : 50
binary_parameter     : 117
block                : 25 26 26 27 28 29 33 34 35 36 83 84 85 86
break_stmt           : 14
call                 : 18 51
command              : 17 58 106 107
command_item         : 104 105 106 107
const_stmt           : 16
dict_literal         : 48 125
dict_pair            : 64 65
dict_pair_list       : 63 65
expr                 : 25 26 27 28 29 30 31 32 40 43 44 56 57 66 66 67 67 68 68 80 81 82 82 87 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 112 126
expr_expansion       : 54
expr_list            : 44 60 79
expr_parens          : 19 55
for_stmt             : 9
function_argument_list : 34 36 38 85 86
function_definition_stmt : 12
if_stmt              : 8
literal              : 46 123
parameter            : 114 115 129 130 131 132 133 134 135 136 137 138
parameter_list       : 105 107 115 140
return_stmt          : 13
set_parameter        : 116 120
shell                : 20
stmt                 : 5 6 7
stmt_list            : 3 4 21 22 0
stmt_redirect        : 1 2 3
subscript_expr       : 52
subscript_left       : 31 80
symbol               : 32 45 81 111 122
unary_expr           : 49
unary_parameter      : 119 120 121
undef_stmt           : 15
while_stmt           : 10

Parsing method: LALR

state 0

    (0) S' -> . stmt_list
    (1) stmt_list -> . stmt_redirect
    (2) stmt_list -> . stmt_redirect NEWLINE
    (3) stmt_list -> . stmt_redirect NEWLINE stmt_list
    (4) stmt_list -> . NEWLINE stmt_list
    (5) stmt_redirect -> . stmt
    (6) stmt_redirect -> . stmt REDIRECT ATOM
    (7) stmt_redirect -> . stmt REDIRECT STRING
    (8) stmt -> . if_stmt
    (9) stmt -> . for_stmt
    (10) stmt -> . while_stmt
    (11) stmt -> . assignment_stmt
    (12) stmt -> . function_definition_stmt
    (13) stmt -> . return_stmt
    (14) stmt -> . break_stmt
    (15) stmt -> . undef_stmt
    (16) stmt -> . const_stmt
    (17) stmt -> . command
    (18) stmt -> . call
    (19) stmt -> . expr_parens
    (20) stmt -> . shell
    (25) if_stmt -> . IF LPAREN expr RPAREN block
    (26) if_stmt -> . IF LPAREN expr RPAREN block ELSE block
    (27) for_stmt -> . FOR LPAREN ATOM IN expr RPAREN block
    (28) for_stmt -> . FOR LPAREN ATOM COMMA ATOM IN expr RPAREN block
    (29) while_stmt -> . WHILE LPAREN expr RPAREN block
    (30) assignment_stmt -> . ATOM ASSIGN expr
    (31) assignment_stmt -> . subscript_left ASSIGN expr
    (33) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN block
    (34) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN block
    (35) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN NEWLINE block
    (36) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN NEWLINE block
    (39) return_stmt -> . RETURN
    (40) return_stmt -> . RETURN expr
    (41) break_stmt -> . BREAK
    (42) undef_stmt -> . UNDEF ATOM
    (32) const_stmt -> . CONST symbol ASSIGN expr
    (104) command -> . command_item
    (105) command -> . command_item parameter_list
    (106) command -> . command_item PIPE command
    (107) command -> . command_item parameter_list PIPE command
    (78) call -> . ATOM LPAREN RPAREN
    (79) call -> . ATOM LPAREN expr_list RPAREN
    (57) expr_parens -> . LPAREN expr RPAREN
    (139) shell -> . SHELL
    (140) shell -> . SHELL parameter_list
    (80) subscript_left -> . subscript_left LBRACKET expr RBRACKET
    (81) subscript_left -> . symbol LBRACKET expr RBRACKET
    (108) command_item -> . LIST
    (109) command_item -> . NUMBER
    (110) command_item -> . UP
    (111) command_item -> . symbol
    (112) command_item -> . COPEN expr RBRACE
    (113) command_item -> . STRING
    (77) symbol -> . ATOM

    NEWLINE         shift and go to state 1
    IF              shift and go to state 16
    FOR             shift and go to state 19
    WHILE           shift and go to state 32
    ATOM            shift and go to state 31
    FUNCTION        shift and go to state 15
    RETURN          shift and go to state 12
    BREAK           shift and go to state 35
    UNDEF           shift and go to state 30
    CONST           shift and go to state 34
    LPAREN          shift and go to state 3
    SHELL           shift and go to state 22
    LIST            shift and go to state 27
    NUMBER          shift and go to state 36
    UP              shift and go to state 24
    COPEN           shift and go to state 23
    STRING          shift and go to state 5

    return_stmt                    shift and go to state 2
    while_stmt                     shift and go to state 4
    call                           shift and go to state 6
    subscript_left                 shift and go to state 9
    stmt                           shift and go to state 26
    command                        shift and go to state 28
    shell                          shift and go to state 20
    stmt_list                      shift and go to state 17
    command_item                   shift and go to state 8
    if_stmt                        shift and go to state 25
    const_stmt                     shift and go to state 10
    symbol                         shift and go to state 33
    assignment_stmt                shift and go to state 13
    stmt_redirect                  shift and go to state 14
    function_definition_stmt       shift and go to state 11
    break_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 18
    undef_stmt                     shift and go to state 29
    expr_parens                    shift and go to state 21

state 1

    (4) stmt_list -> NEWLINE . stmt_list
    (1) stmt_list -> . stmt_redirect
    (2) stmt_list -> . stmt_redirect NEWLINE
    (3) stmt_list -> . stmt_redirect NEWLINE stmt_list
    (4) stmt_list -> . NEWLINE stmt_list
    (5) stmt_redirect -> . stmt
    (6) stmt_redirect -> . stmt REDIRECT ATOM
    (7) stmt_redirect -> . stmt REDIRECT STRING
    (8) stmt -> . if_stmt
    (9) stmt -> . for_stmt
    (10) stmt -> . while_stmt
    (11) stmt -> . assignment_stmt
    (12) stmt -> . function_definition_stmt
    (13) stmt -> . return_stmt
    (14) stmt -> . break_stmt
    (15) stmt -> . undef_stmt
    (16) stmt -> . const_stmt
    (17) stmt -> . command
    (18) stmt -> . call
    (19) stmt -> . expr_parens
    (20) stmt -> . shell
    (25) if_stmt -> . IF LPAREN expr RPAREN block
    (26) if_stmt -> . IF LPAREN expr RPAREN block ELSE block
    (27) for_stmt -> . FOR LPAREN ATOM IN expr RPAREN block
    (28) for_stmt -> . FOR LPAREN ATOM COMMA ATOM IN expr RPAREN block
    (29) while_stmt -> . WHILE LPAREN expr RPAREN block
    (30) assignment_stmt -> . ATOM ASSIGN expr
    (31) assignment_stmt -> . subscript_left ASSIGN expr
    (33) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN block
    (34) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN block
    (35) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN NEWLINE block
    (36) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN NEWLINE block
    (39) return_stmt -> . RETURN
    (40) return_stmt -> . RETURN expr
    (41) break_stmt -> . BREAK
    (42) undef_stmt -> . UNDEF ATOM
    (32) const_stmt -> . CONST symbol ASSIGN expr
    (104) command -> . command_item
    (105) command -> . command_item parameter_list
    (106) command -> . command_item PIPE command
    (107) command -> . command_item parameter_list PIPE command
    (78) call -> . ATOM LPAREN RPAREN
    (79) call -> . ATOM LPAREN expr_list RPAREN
    (57) expr_parens -> . LPAREN expr RPAREN
    (139) shell -> . SHELL
    (140) shell -> . SHELL parameter_list
    (80) subscript_left -> . subscript_left LBRACKET expr RBRACKET
    (81) subscript_left -> . symbol LBRACKET expr RBRACKET
    (108) command_item -> . LIST
    (109) command_item -> . NUMBER
    (110) command_item -> . UP
    (111) command_item -> . symbol
    (112) command_item -> . COPEN expr RBRACE
    (113) command_item -> . STRING
    (77) symbol -> . ATOM

    NEWLINE         shift and go to state 1
    IF              shift and go to state 16
    FOR             shift and go to state 19
    WHILE           shift and go to state 32
    ATOM            shift and go to state 31
    FUNCTION        shift and go to state 15
    RETURN          shift and go to state 12
    BREAK           shift and go to state 35
    UNDEF           shift and go to state 30
    CONST           shift and go to state 34
    LPAREN          shift and go to state 3
    SHELL           shift and go to state 22
    LIST            shift and go to state 27
    NUMBER          shift and go to state 36
    UP              shift and go to state 24
    COPEN           shift and go to state 23
    STRING          shift and go to state 5

    return_stmt                    shift and go to state 2
    while_stmt                     shift and go to state 4
    call                           shift and go to state 6
    subscript_left                 shift and go to state 9
    stmt                           shift and go to state 26
    command                        shift and go to state 28
    shell                          shift and go to state 20
    stmt_list                      shift and go to state 37
    command_item                   shift and go to state 8
    if_stmt                        shift and go to state 25
    const_stmt                     shift and go to state 10
    symbol                         shift and go to state 33
    assignment_stmt                shift and go to state 13
    stmt_redirect                  shift and go to state 14
    function_definition_stmt       shift and go to state 11
    break_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 18
    undef_stmt                     shift and go to state 29
    expr_parens                    shift and go to state 21

state 2

    (13) stmt -> return_stmt .

    REDIRECT        reduce using rule 13 (stmt -> return_stmt .)
    NEWLINE         reduce using rule 13 (stmt -> return_stmt .)
    RBRACE          reduce using rule 13 (stmt -> return_stmt .)
    $end            reduce using rule 13 (stmt -> return_stmt .)


state 3

    (57) expr_parens -> LPAREN . expr RPAREN
    (45) expr -> . symbol
    (46) expr -> . literal
    (47) expr -> . array_literal
    (48) expr -> . dict_literal
    (49) expr -> . unary_expr
    (50) expr -> . binary_expr
    (51) expr -> . call
    (52) expr -> . subscript_expr
    (53) expr -> . anon_function_expr
    (54) expr -> . expr_expansion
    (55) expr -> . expr_parens
    (56) expr -> . COPEN expr RBRACE
    (77) symbol -> . ATOM
    (69) literal -> . NUMBER
    (70) literal -> . HEXNUMBER
    (71) literal -> . BINNUMBER
    (72) literal -> . OCTNUMBER
    (73) literal -> . STRING
    (74) literal -> . TRUE
    (75) literal -> . FALSE
    (76) literal -> . NULL
    (59) array_literal -> . LBRACKET RBRACKET
    (60) array_literal -> . LBRACKET expr_list RBRACKET
    (61) dict_literal -> . LBRACE RBRACE
    (62) dict_literal -> . LBRACE NEWLINE RBRACE
    (63) dict_literal -> . LBRACE dict_pair_list RBRACE
    (87) unary_expr -> . MINUS expr
    (88) unary_expr -> . NOT expr
    (89) binary_expr -> . expr EQ expr
    (90) binary_expr -> . expr NE expr
    (91) binary_expr -> . expr GT expr
    (92) binary_expr -> . expr GE expr
    (93) binary_expr -> . expr LT expr
    (94) binary_expr -> . expr LE expr
    (95) binary_expr -> . expr PLUS expr
    (96) binary_expr -> . expr MINUS expr
    (97) binary_expr -> . expr MUL expr
    (98) binary_expr -> . expr DIV expr
    (99) binary_expr -> . expr REGEX expr
    (100) binary_expr -> . expr AND expr
    (101) binary_expr -> . expr OR expr
    (102) binary_expr -> . expr NOT expr
    (103) binary_expr -> . expr MOD expr
    (78) call -> . ATOM LPAREN RPAREN
    (79) call -> . ATOM LPAREN expr_list RPAREN
    (82) subscript_expr -> . expr LBRACKET expr RBRACKET
    (83) anon_function_expr -> . FUNCTION LPAREN RPAREN block
    (84) anon_function_expr -> . FUNCTION LPAREN RPAREN NEWLINE block
    (85) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN block
    (86) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN NEWLINE block
    (58) expr_expansion -> . EOPEN command RPAREN
    (57) expr_parens -> . LPAREN expr RPAREN

    COPEN           shift and go to state 52
    ATOM            shift and go to state 58
    NUMBER          shift and go to state 39
    HEXNUMBER       shift and go to state 42
    BINNUMBER       shift and go to state 50
    OCTNUMBER       shift and go to state 44
    STRING          shift and go to state 40
    TRUE            shift and go to state 56
    FALSE           shift and go to state 38
    NULL            shift and go to state 43
    LBRACKET        shift and go to state 55
    LBRACE          shift and go to state 64
    MINUS           shift and go to state 63
    NOT             shift and go to state 65
    FUNCTION        shift and go to state 48
    EOPEN           shift and go to state 49
    LPAREN          shift and go to state 3

    expr                           shift and go to state 54
    dict_literal                   shift and go to state 53
    call                           shift and go to state 41
    expr_expansion                 shift and go to state 45
    array_literal                  shift and go to state 46
    anon_function_expr             shift and go to state 47
    unary_expr                     shift and go to state 57
    subscript_expr                 shift and go to state 61
    binary_expr                    shift and go to state 59
    symbol                         shift and go to state 62
    expr_parens                    shift and go to state 51
    literal                        shift and go to state 60

state 4

    (10) stmt -> while_stmt .

    REDIRECT        reduce using rule 10 (stmt -> while_stmt .)
    NEWLINE         reduce using rule 10 (stmt -> while_stmt .)
    RBRACE          reduce using rule 10 (stmt -> while_stmt .)
    $end            reduce using rule 10 (stmt -> while_stmt .)


state 5

    (113) command_item -> STRING .

    PIPE            reduce using rule 113 (command_item -> STRING .)
    error           reduce using rule 113 (command_item -> STRING .)
    ATOM            reduce using rule 113 (command_item -> STRING .)
    COPEN           reduce using rule 113 (command_item -> STRING .)
    LIST            reduce using rule 113 (command_item -> STRING .)
    UP              reduce using rule 113 (command_item -> STRING .)
    NUMBER          reduce using rule 113 (command_item -> STRING .)
    HEXNUMBER       reduce using rule 113 (command_item -> STRING .)
    BINNUMBER       reduce using rule 113 (command_item -> STRING .)
    OCTNUMBER       reduce using rule 113 (command_item -> STRING .)
    STRING          reduce using rule 113 (command_item -> STRING .)
    TRUE            reduce using rule 113 (command_item -> STRING .)
    FALSE           reduce using rule 113 (command_item -> STRING .)
    NULL            reduce using rule 113 (command_item -> STRING .)
    LBRACKET        reduce using rule 113 (command_item -> STRING .)
    LBRACE          reduce using rule 113 (command_item -> STRING .)
    REDIRECT        reduce using rule 113 (command_item -> STRING .)
    NEWLINE         reduce using rule 113 (command_item -> STRING .)
    $end            reduce using rule 113 (command_item -> STRING .)
    RBRACE          reduce using rule 113 (command_item -> STRING .)
    RPAREN          reduce using rule 113 (command_item -> STRING .)


state 6

    (18) stmt -> call .

    REDIRECT        reduce using rule 18 (stmt -> call .)
    NEWLINE         reduce using rule 18 (stmt -> call .)
    RBRACE          reduce using rule 18 (stmt -> call .)
    $end            reduce using rule 18 (stmt -> call .)


state 7

    (14) stmt -> break_stmt .

    REDIRECT        reduce using rule 14 (stmt -> break_stmt .)
    NEWLINE         reduce using rule 14 (stmt -> break_stmt .)
    RBRACE          reduce using rule 14 (stmt -> break_stmt .)
    $end            reduce using rule 14 (stmt -> break_stmt .)


state 8

    (104) command -> command_item .
    (105) command -> command_item . parameter_list
    (106) command -> command_item . PIPE command
    (107) command -> command_item . parameter_list PIPE command
    (114) parameter_list -> . parameter
    (115) parameter_list -> . parameter parameter_list
    (116) parameter -> . set_parameter
    (117) parameter -> . binary_parameter
    (118) parameter -> . error
    (119) set_parameter -> . unary_parameter
    (120) set_parameter -> . unary_parameter COMMA set_parameter
    (121) set_parameter -> . unary_parameter COMMA error
    (129) binary_parameter -> . ATOM ASSIGN parameter
    (130) binary_parameter -> . ATOM EQ parameter
    (131) binary_parameter -> . ATOM NE parameter
    (132) binary_parameter -> . ATOM GT parameter
    (133) binary_parameter -> . ATOM GE parameter
    (134) binary_parameter -> . ATOM LT parameter
    (135) binary_parameter -> . ATOM LE parameter
    (136) binary_parameter -> . ATOM REGEX parameter
    (137) binary_parameter -> . ATOM INC parameter
    (138) binary_parameter -> . ATOM DEC parameter
    (122) unary_parameter -> . symbol
    (123) unary_parameter -> . literal
    (124) unary_parameter -> . array_literal
    (125) unary_parameter -> . dict_literal
    (126) unary_parameter -> . COPEN expr RBRACE
    (127) unary_parameter -> . LIST
    (128) unary_parameter -> . UP
    (77) symbol -> . ATOM
    (69) literal -> . NUMBER
    (70) literal -> . HEXNUMBER
    (71) literal -> . BINNUMBER
    (72) literal -> . OCTNUMBER
    (73) literal -> . STRING
    (74) literal -> . TRUE
    (75) literal -> . FALSE
    (76) literal -> . NULL
    (59) array_literal -> . LBRACKET RBRACKET
    (60) array_literal -> . LBRACKET expr_list RBRACKET
    (61) dict_literal -> . LBRACE RBRACE
    (62) dict_literal -> . LBRACE NEWLINE RBRACE
    (63) dict_literal -> . LBRACE dict_pair_list RBRACE

    REDIRECT        reduce using rule 104 (command -> command_item .)
    NEWLINE         reduce using rule 104 (command -> command_item .)
    RBRACE          reduce using rule 104 (command -> command_item .)
    $end            reduce using rule 104 (command -> command_item .)
    RPAREN          reduce using rule 104 (command -> command_item .)
    PIPE            shift and go to state 67
    error           shift and go to state 73
    ATOM            shift and go to state 74
    COPEN           shift and go to state 71
    LIST            shift and go to state 79
    UP              shift and go to state 69
    NUMBER          shift and go to state 39
    HEXNUMBER       shift and go to state 42
    BINNUMBER       shift and go to state 50
    OCTNUMBER       shift and go to state 44
    STRING          shift and go to state 40
    TRUE            shift and go to state 56
    FALSE           shift and go to state 38
    NULL            shift and go to state 43
    LBRACKET        shift and go to state 55
    LBRACE          shift and go to state 64

    parameter                      shift and go to state 76
    dict_literal                   shift and go to state 72
    symbol                         shift and go to state 77
    parameter_list                 shift and go to state 78
    set_parameter                  shift and go to state 66
    binary_parameter               shift and go to state 75
    unary_parameter                shift and go to state 80
    array_literal                  shift and go to state 68
    literal                        shift and go to state 70

state 9

    (31) assignment_stmt -> subscript_left . ASSIGN expr
    (80) subscript_left -> subscript_left . LBRACKET expr RBRACKET

    ASSIGN          shift and go to state 82
    LBRACKET        shift and go to state 81


state 10

    (16) stmt -> const_stmt .

    REDIRECT        reduce using rule 16 (stmt -> const_stmt .)
    NEWLINE         reduce using rule 16 (stmt -> const_stmt .)
    RBRACE          reduce using rule 16 (stmt -> const_stmt .)
    $end            reduce using rule 16 (stmt -> const_stmt .)


state 11

    (12) stmt -> function_definition_stmt .

    REDIRECT        reduce using rule 12 (stmt -> function_definition_stmt .)
    NEWLINE         reduce using rule 12 (stmt -> function_definition_stmt .)
    RBRACE          reduce using rule 12 (stmt -> function_definition_stmt .)
    $end            reduce using rule 12 (stmt -> function_definition_stmt .)


state 12

    (39) return_stmt -> RETURN .
    (40) return_stmt -> RETURN . expr
    (45) expr -> . symbol
    (46) expr -> . literal
    (47) expr -> . array_literal
    (48) expr -> . dict_literal
    (49) expr -> . unary_expr
    (50) expr -> . binary_expr
    (51) expr -> . call
    (52) expr -> . subscript_expr
    (53) expr -> . anon_function_expr
    (54) expr -> . expr_expansion
    (55) expr -> . expr_parens
    (56) expr -> . COPEN expr RBRACE
    (77) symbol -> . ATOM
    (69) literal -> . NUMBER
    (70) literal -> . HEXNUMBER
    (71) literal -> . BINNUMBER
    (72) literal -> . OCTNUMBER
    (73) literal -> . STRING
    (74) literal -> . TRUE
    (75) literal -> . FALSE
    (76) literal -> . NULL
    (59) array_literal -> . LBRACKET RBRACKET
    (60) array_literal -> . LBRACKET expr_list RBRACKET
    (61) dict_literal -> . LBRACE RBRACE
    (62) dict_literal -> . LBRACE NEWLINE RBRACE
    (63) dict_literal -> . LBRACE dict_pair_list RBRACE
    (87) unary_expr -> . MINUS expr
    (88) unary_expr -> . NOT expr
    (89) binary_expr -> . expr EQ expr
    (90) binary_expr -> . expr NE expr
    (91) binary_expr -> . expr GT expr
    (92) binary_expr -> . expr GE expr
    (93) binary_expr -> . expr LT expr
    (94) binary_expr -> . expr LE expr
    (95) binary_expr -> . expr PLUS expr
    (96) binary_expr -> . expr MINUS expr
    (97) binary_expr -> . expr MUL expr
    (98) binary_expr -> . expr DIV expr
    (99) binary_expr -> . expr REGEX expr
    (100) binary_expr -> . expr AND expr
    (101) binary_expr -> . expr OR expr
    (102) binary_expr -> . expr NOT expr
    (103) binary_expr -> . expr MOD expr
    (78) call -> . ATOM LPAREN RPAREN
    (79) call -> . ATOM LPAREN expr_list RPAREN
    (82) subscript_expr -> . expr LBRACKET expr RBRACKET
    (83) anon_function_expr -> . FUNCTION LPAREN RPAREN block
    (84) anon_function_expr -> . FUNCTION LPAREN RPAREN NEWLINE block
    (85) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN block
    (86) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN NEWLINE block
    (58) expr_expansion -> . EOPEN command RPAREN
    (57) expr_parens -> . LPAREN expr RPAREN

    REDIRECT        reduce using rule 39 (return_stmt -> RETURN .)
    NEWLINE         reduce using rule 39 (return_stmt -> RETURN .)
    $end            reduce using rule 39 (return_stmt -> RETURN .)
    RBRACE          reduce using rule 39 (return_stmt -> RETURN .)
    COPEN           shift and go to state 52
    ATOM            shift and go to state 58
    NUMBER          shift and go to state 39
    HEXNUMBER       shift and go to state 42
    BINNUMBER       shift and go to state 50
    OCTNUMBER       shift and go to state 44
    STRING          shift and go to state 40
    TRUE            shift and go to state 56
    FALSE           shift and go to state 38
    NULL            shift and go to state 43
    LBRACKET        shift and go to state 55
    LBRACE          shift and go to state 64
    MINUS           shift and go to state 63
    NOT             shift and go to state 65
    FUNCTION        shift and go to state 48
    EOPEN           shift and go to state 49
    LPAREN          shift and go to state 3

    expr                           shift and go to state 83
    dict_literal                   shift and go to state 53
    call                           shift and go to state 41
    expr_expansion                 shift and go to state 45
    array_literal                  shift and go to state 46
    anon_function_expr             shift and go to state 47
    unary_expr                     shift and go to state 57
    subscript_expr                 shift and go to state 61
    binary_expr                    shift and go to state 59
    symbol                         shift and go to state 62
    expr_parens                    shift and go to state 51
    literal                        shift and go to state 60

state 13

    (11) stmt -> assignment_stmt .

    REDIRECT        reduce using rule 11 (stmt -> assignment_stmt .)
    NEWLINE         reduce using rule 11 (stmt -> assignment_stmt .)
    RBRACE          reduce using rule 11 (stmt -> assignment_stmt .)
    $end            reduce using rule 11 (stmt -> assignment_stmt .)


state 14

    (1) stmt_list -> stmt_redirect .
    (2) stmt_list -> stmt_redirect . NEWLINE
    (3) stmt_list -> stmt_redirect . NEWLINE stmt_list

    RBRACE          reduce using rule 1 (stmt_list -> stmt_redirect .)
    $end            reduce using rule 1 (stmt_list -> stmt_redirect .)
    NEWLINE         shift and go to state 84


state 15
